<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoreApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login">StoreApp</string>
    <string name="title_activity_choose_task">Choose Task</string>
    <string name="title_activity_radio_player">Radio</string>
    <string name="title_activity_emp_details">Employee Details</string>
    <string name="title_activity_store_items">Store  Items</string>
    <string name="title_activity_register_item">MainActivity</string>
    <string name="hint_register_item_name">Description</string>
    <string name="hint_register_item_purchase_price">Purchase Price</string>
    <string name="hint_register_item_selling_price">Selling Price</string>
    <string name="text_register_item_registerbtn">Register</string>
    <string name="text_barcode">Barcode:</string>
    <string name="text_close">Close</string>
    <string name="text_amount">Amount:</string>
    <string name="text_continue">Continue</string>
    <string name="text_log_out">Log Out?</string>
    <string name="text_want_log_out">Want to log out?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">NO</string>
    <string name="text_description">Description</string>
    <string name="text_scan_barcode">Scan Barcode</string>
    <string name="text_ean_type">EAN-Type:</string>
    <string name="text_read_messages">READ MESSAGES</string>
    <string name="text_write_messages">WRITE MESSAGES</string>
    <string name="search_for_employee">Enter The Name.</string>
    <string name="text_enter_password">Enter A Password</string>
    <string name="text_this_password_will">This password will be your access code to log in with to this application.</string>
    <string name="title_activity_cash_register">Cash  Register</string>
    <string name="title_activity_store_status">Store  Status</string>
    <string name="title_activity_employee_list">Employee" "List</string>
    <string name="title_activity_list_view_opened">ListViewOpened</string>
    <string name="action_settings1">Settings</string>
    <string name="title_activity_emp__info">Employee"  "Info</string>
    <string name="title_activity_fragment_write_message">FragmentWriteMessage</string>
    <string name="title_activity_store__status">Store Status</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_key_show_initials">pref_show_initials</string>
    <string name="pref_key_enable_application_sounds">pref_enable_application_sounds</string>
    <string name="pref_key_sort_messages">pref_sort_messages</string>
    <string name="pref_key_delete_messages">pref_delete_messages</string>
    <string name="title_activity_message__details">Message_Details</string>
    <string name="value_show_messages_1_hour_old">3600</string>
    <string name="text_customer_has_to_pay_more">Customer Has To Pay More!</string>
    <string name="value_show_messages_1_day_old">86400</string>
    <string name="value_show_messages_1_week_old">604800</string>
    <string name="value_show_messages_1_year_old">31449600</string>
    <string name="value_show_messages_all">0</string>
    <string name="value_delete_messages_1_day_old">1</string>
    <string name="value_delete_messages_1_week_old">7</string>
    <string name="value_delete_messages_1_month_old">30</string>
    <string name="value_delete_messages_1_year_old">365</string>
    <string name="pref_key_should_delete_old_messages">pref_key_should_delete_old_messages</string>
    <string name="text_total">"Total"</string>
    <string name="text_received">"Received: "</string>
    <string name="text_scan_Item">Scan</string>
    <string name="text_whats_your_name">What Is Your name?</string>
    <string name="text_your_email_phone_number">Your Email must be the that is added to this application by your store manager, and this will also function as the login username to this application.</string>
    <string name="text_whats_your_phone_email">What Is Your Email and Phone Number?</string>
    <string name="text_business_info">Enter Your Business Info?</string>
    <string name="text_when_you_enter">When you enter your name, it is easier for your colleagues to recognize you.</string>
    <string name="text_choose_initials_description">Your initials are used as your username for this application. Choose one you find easy to remember.</string>
    <string name="text_expedite">Expedite</string>
    <string name="text_cancel">C</string>
    <string name="text_cart_is_Empty">The Cart Is Empty!</string>
    <string name="text_new_Scan">N</string>
    <string name="text_50_kr">50 Kr</string>
    <string name="text_100_kr">100 Kr</string>
    <string name="text_200_kr">200 Kr</string>
    <string name="text_500_kr">500 Kr</string>
    <string name="text_c.card">C.Card</string>
    <string name="text_under_construction">Under Construction</string>
    <string name="text_choose_initials">Choose Your Initials</string>
    <string name="text_check">Check</string>
    <string name="text_done">Done</string>
    <string name="text_cash">Chash</string>
    <string name="hint_dkk">DKK</string>
    <string name="text_1">1</string>
    <string name="text_storeApp">StoreApp</string>
    <string name="hint_initials">Initials</string>
    <string name="hint_password">Password</string>
    <string name="text_Login">Login</string>
    <string name="text_name">Name:</string>
    <string name="text_initials">Initials:</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_repeat_password">Repeat Password</string>
    <string name="text_register">Register</string>
    <string name="text_exp.date">Ex.Date</string>
    <string name="text_store_item">Store Item</string>
    <string name="text_log_out_2">Log  Out</string>
    <string name="text_headline">Headline:</string>
    <string name="text_from">From:</string>
    <string name="text_sent">Sent:</string>
    <string name="text_message">Message:</string>
    <string name="text_1_hour_old">1 Hour Old</string>
    <string name="text_1_day_old">1 Day Old</string>
    <string name="text_1_month_old">1 Month Old</string>
    <string name="text_1_week_old">1 Week Old</string>
    <string name="text_1_year_old">1 Year Old</string>
    <string name="text_all_old">All</string>
    <string name="text_send">Send</string>
    <string name="text_items_in_stock">Items In Stock</string>
    <string name="text_sold_items">Sold Items</string>
    <string name="text_top_10_items">Top 10 Items</string>
    <string name="text_expired_items">Expired Items</string>
    <string name="text_to_pay_back">Pay back:</string>
    <string name="text_items_to_order">Items To Order</string>
    <string name="text_profit_status">Profit Status</string>
    <string name="text_home">Home</string>
    <string name="text_the_check_is_not_big_enough">The Check Is not big enough!</string>
    <string name="title_activity_start">Start</string>
    <string name="value_language_danish">da</string>
    <string name="value_language_french">fr</string>
    <string name="value_language_german">de</string>
    <string name="value_language_english">en</string>
    <string name="value_language_default">@string/value_language_english</string>
    <string name="text_change_language">Change Language:</string>
    <string name="text_application_sounds_tittle"> Application Sounds</string>
    <string name="text_change_language_summary">You can choose between different languages. Choose the one you understand!</string>
    <string name="pref_key_change_application_language">pref_key_change_application_language</string>
    <string name="text_application_sounds_summary">Enable or Disable activity changing sound, cash register sound etc..!</string>
    <string name="text_delete_messages_title">Messages that are more than:</string>
    <string name="text_delete_messages_summary">Define how old messages you want delete.</string>
    <string name="text_show_initials_title"> Show Initials</string>
    <string name="text_show_initials_summary">Choose whether you want to show your name when writting messages to your colleagues</string>
    <string name="text_show_messages_title">Show Messages that are:</string>
    <string name="text_show_messages_summary">Choose how old messages you want to read.</string>
    <string name="text_delete_messages_automatically_title">Delete messages automatically</string>
    <string name="text_delete_messages_automatically_summary">Let the system automatically delete old messages. You can choose the time.</string>
    <string name="text_enter_the_received_amount">Enter the received amount</string>
    <string name="text_enter_the_received_check">Enter the received Check!</string>
    <string name="text_item_already_updated">Item Already Updated!</string>
    <string name="text_item_already_scanned">"Item Already Scanned!"</string>
    <string name="text_not_enough">"Not Enough in Stock. We have only: "</string>
    <string name="text_you_are_now_calling_to">"You Are Now Calling To: "</string>
    <string name="text_message_sent">"Message Sent!"</string>
    <string name="text_message_not_sent">"Error: Message Is Not Sent!"</string>
    <string name="text_alle_fields_required">"Alle Fields Required!"</string>
    <string name="text_wrong_credentials"> "Wrong credentials!"</string>
    <string name="text_password_does_not_match">"Passwords Does Not Match!"</string>
    <string name="title_activity_fragmenttest">FragmenttestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registration_busines_employee">RegistrationBusinesEmployee</string>
    <string name="title_activity_store_status_dialog">StoreStatusDialogActivity</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="title_activity_bar_chart_activity_example">BarChartActivityExample</string>

    <string name="tab">\u0009</string>


</resources>