<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    <com.storeapp.ui.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white" >

        <Button
            android:id="@+id/ctCashRegBtn"
            style="@style/DashboardButton"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:drawableTop="@drawable/dashboard_cash_register_btn_pressed"
            android:text="@string/title_activity_cash_register" />

        <Button
            android:id="@+id/ctStoreItemBtn"
            style="@style/DashboardButton"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:drawableTop="@drawable/dashboard_store_item_btn_pressed"
            android:text="@string/title_activity_store_items" />

        <Button
            android:id="@+id/ctStoreStatus"
            style="@style/DashboardButton"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:drawableTop="@drawable/dashborad_store_status_btn_pressed"
            android:text="@string/title_activity_store__status" />

        <Button
            android:id="@+id/ctEmplList"
            style="@style/DashboardButton"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:drawableTop="@drawable/dashborad_employee_btn_pressed"
            android:text="@string/title_activity_employee_list" />



    </com.storeapp.ui.DashboardLayout>


</RelativeLayout>
