<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="4" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/view_dist_sides_20"
        >


        <TextView
            android:id="@+id/txtHvadHedderDu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/text_enter_password"
            style="@style/RegistrationFragHeader"
            />

        <TextView
            android:id="@+id/txtDescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_dist_sides_20"
            android:layout_marginRight="@dimen/view_dist_sides_20"
            android:layout_weight="1"
            style="@style/RegistrationExplainText"
            android:text="@string/text_this_password_will"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_weight="2"
        android:layout_marginLeft="@dimen/view_dist_sides_15"
        android:layout_marginRight="@dimen/view_dist_sides_15"
        android:gravity="center|center_horizontal"
        android:background="@color/white"
        android:orientation="vertical" >

        <com.storeapp.ui.FloatingEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            style="@style/EditTextStyle"
        />

        <com.storeapp.ui.FloatingEditText
            android:id="@+id/editRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_dist_sides_20"
            android:ems="10"
            android:hint="@string/text_repeat_password"
            android:inputType="textPassword"
            style="@style/EditTextStyle"
        />
    </LinearLayout>



</LinearLayout>