<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="4" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/view_dist_sides_20"
>

        <TextView
            android:id="@+id/txtHvadHedderDu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/text_whats_your_phone_email"
            style="@style/RegistrationFragHeader"
            />

        <TextView
            android:id="@+id/txtDescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_dist_sides_20"
            android:layout_marginRight="@dimen/view_dist_sides_20"
            android:gravity="center_horizontal"
            android:text="@string/text_your_email_phone_number"
            style="@style/RegistrationExplainText"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_dist_sides_50"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/view_dist_sides_15"
        android:layout_marginRight="@dimen/view_dist_sides_15"
        android:gravity="center"
        >

        <com.storeapp.ui.FloatingEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/text_email"
            android:inputType="textWebEmailAddress"
            style="@style/EditTextStyle"
        />

        <com.storeapp.ui.FloatingEditText
            android:id="@+id/editPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/view_dist_sides_20"
            android:ems="10"
            android:hint="@string/text_phone_number"
            android:inputType="number"
            style="@style/EditTextStyle"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_dist_sides_50"
        android:layout_weight=".5"
        android:orientation="vertical"
        android:weightSum="1.5" >



    </LinearLayout>

</LinearLayout>