<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="2"
        >

        <TextView
            android:id="@+id/txtHvadHedderDu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/text_whats_your_name"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:text="@string/text_when_you_enter"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal|center"
        android:weightSum="2"
       >
        <com.storeapp.Activities.ExternalClasses.FloatingEditText
            android:id="@+id/editNameBusiness"
            style="@style/EditTextAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="12"
            android:hint="Name"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/black"
        />

        <com.storeapp.Activities.ExternalClasses.FloatingEditText
            android:id="@+id/editPhoneNumBusiness"
            style="@style/EditTextAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="12"
            android:hint="@string/text_phone_number"
            android:inputType="number"
            android:textColor="@color/black"
        />

    </LinearLayout>



</LinearLayout>